tests/neg/singleton-ctx-bound.check
-- [E007] Type Mismatch Error: tests/neg/singleton-ctx-bound.scala:7:5 -------------------------------------------------
7 |  f1(someInt) // error
  |     ^^^^^^^
  |     Found:    Int
  |     Required: Singleton
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/singleton-ctx-bound.scala:12:5 ------------------------------------------------
12 |  f2(someInt) // error
   |     ^^^^^^^
   |     Found:    Int
   |     Required: Singleton
   |
   | longer explanation available when compiling with `-explain`
-- [E172] Type Error: tests/neg/singleton-ctx-bound.scala:13:26 --------------------------------------------------------
13 |  f2(if ??? then 1 else 2)   // error
   |                          ^
   |No given instance of type (1 : Int) | (2 : Int) is Singleton was found for parameter x$2 of method f2 in object Test. Failed to synthesize an instance of type (1 : Int) | (2 : Int) is Singleton: (1 : Int) | (2 : Int) is not a singleton
-- [E007] Type Mismatch Error: tests/neg/singleton-ctx-bound.scala:17:5 ------------------------------------------------
17 |  f3(someInt) // error
   |     ^^^^^^^
   |     Found:    Int
   |     Required: Singleton
   |
   | longer explanation available when compiling with `-explain`
-- [E172] Type Error: tests/neg/singleton-ctx-bound.scala:18:26 --------------------------------------------------------
18 |  f3(if ??? then 1 else 2)   // error
   |                          ^
   |No given instance of type Singleton{type Self = (1 : Int) | (2 : Int)} was found for a context parameter of method f3 in object Test. Failed to synthesize an instance of type Singleton{type Self = (1 : Int) | (2 : Int)}: (1 : Int) | (2 : Int) is not a singleton
-- [E172] Type Error: tests/neg/singleton-ctx-bound.scala:33:6 ---------------------------------------------------------
33 |class D extends A:  // error
   |^
   |No given instance of type Singleton{type Self = D.this.Elem} was found for inferring the implementation of the deferred given instance given_Singleton_Elem in trait A. Failed to synthesize an instance of type Singleton{type Self = D.this.Elem}: D.this.Elem is not a singleton
34 |  type Elem = Int
